--- a/index.html
+++ b/index.html
@@ -111,9 +111,98 @@
                 <option value="vovlo">39</option>
                 <option value="vovlo">40</option>
             </select>
+            <a href="#">Add to Cart</a>
+            <span>190$</span>
         </div>
     </div>
 
+
+    <div class="myslides">
+        <h2>
+            Air <br> Jordon<br>
+            <span>5 Retro</span>
+        </h2>
+        <img src="img/slider-2.png" alt="nike shoe" class='p_img'>
+        <div class="p_detail">
+            <h3>
+                Nike
+                <i class="fa fa-star rate"></i>
+                <i class="fa fa-star rate"></i>
+                <i class="fa fa-star rate"></i>
+                <i class="fa fa-star rate"></i>
+                <i class="fa fa-star "></i>
+            </h3>
+            <h4>Air Jordon 5 Rretro</h4>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis, molestias.</p>
+            <ul>
+                <li>
+                    <i class="fa fa-angle-right"></i>
+                    Lorem, ipsum dolor sit amet.
+                </li>
+                <li>
+                    <i class="fa fa-angle-right"></i>
+                    Lorem, ipsum dolor sit amet.
+                </li>
+            </ul>
+
+            <select>
+                <option value="vovlo">Size</option>
+                <option value="vovlo">36</option>
+                <option value="vovlo">37</option>
+                <option value="vovlo">38</option>
+                <option value="vovlo">39</option>
+                <option value="vovlo">40</option>
+            </select>
+            <a href="#">Add to Cart</a>
+            <span>190$</span>
+        </div>
+    </div>
+
+
+    <div class="myslides">
+        <h2>
+            Air <br> Jordon<br>
+            <span>5 Retro</span>
+        </h2>
+        <img src="img/slider-3.png" alt="nike shoe" class='p_img'>
+        <div class="p_detail">
+            <h3>
+                Nike
+                <i class="fa fa-star rate"></i>
+                <i class="fa fa-star rate"></i>
+                <i class="fa fa-star rate"></i>
+                <i class="fa fa-star rate"></i>
+                <i class="fa fa-star "></i>
+            </h3>
+            <h4>Air Jordon 5 Rretro</h4>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis, molestias.</p>
+            <ul>
+                <li>
+                    <i class="fa fa-angle-right"></i>
+                    Lorem, ipsum dolor sit amet.
+                </li>
+                <li>
+                    <i class="fa fa-angle-right"></i>
+                    Lorem, ipsum dolor sit amet.
+                </li>
+            </ul>
+
+            <select>
+                <option value="vovlo">Size</option>
+                <option value="vovlo">36</option>
+                <option value="vovlo">37</option>
+                <option value="vovlo">38</option>
+                <option value="vovlo">39</option>
+                <option value="vovlo">40</option>
+            </select>
+            <a href="#">Add to Cart</a>
+            <span>190$</span>
+        </div>
+    </div>
+        <a class="prev" onclick="plusSlides(-1)">
+        &#10094;</a>
+        <a class="next" onclick="plusSlides(1)">
+            &#10095;</a>
 </section>
 
 
